Fixed alarm not working Fixed alarmhourhand jumping between numbers Added Error message if alarm's not working

--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ body > #clock {
   height: 52ch;
 }
 body > span {
-  visibility: hidden;
   top: unset;
-  bottom: 1ch;
+  bottom: 3ch;
   left: 1ch;
 }
